update 15/07/20, documentation en cours

--- a/notebooks0.15/data_reduction.ipynb
+++ b/notebooks0.15/data_reduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'0.15'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +66,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modification du fichier obs-index, qui contient les TSART et les TSTOP en mjd là où gammapy les attends en secondes, \n",
+    "si on ne fait pas ça (pour ces donnée et la version 0.15), gammapy n'arrive pas à sélectionner les observations voulues, \n",
+    "car il a ajouté une valeur en mjd comme des secondes à la date de référence pour trouver leur date de début (qui est donc faussée)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -101,17 +110,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Emprunt d'une classe implémentée en 0.16"
+    "## Emprunt d'une classe implémentée en 0.16\n",
+    "\n",
+    "FoVBackgroundMaker normalise le modèle de fond sur tout le champ de vue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##FoV background estimation\n",
@@ -232,12 +239,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define which data to use and print some information"
+    "Define which data to use and print some information\n",
+    "\n",
+    "pour la production hap-fr ash : ash_stereo_Prod17_Calib0834_thsq64\n",
+    "\n",
+    "pour la production hap-fr he : he_stereo_Prod17_Calib0834_thsq64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,12 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.coordinates import Angle\n",
+    "# Ici on choisit la région du ciel dans laquelle on sélectionne nos observations (en fonction des directions d'observation)\n",
     "\n",
+    "from astropy.coordinates import Angle\n",
     "\n",
     "selection = dict(type='sky_circle', frame='galactic',\n",
     "                 lon=Angle(0, 'deg'),\n",
@@ -282,37 +294,18 @@
     "                 radius=Angle(1.8, 'deg'),\n",
     "                 border=Angle(0, 'deg'))\n",
     "\n",
-    "obs_table = data_store.obs_table.select_observations(selection)\n",
-    "\n",
-    "#ok"
+    "obs_table = data_store.obs_table.select_observations(selection)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<TableColumns names=('AIRTEMP','ALT_PNT','AZ_PNT','BKG_SCALE','BROKPIX','DATE_END','DATE_OBS','DEADC','DEC_OBJ','DEC_PNT','EFFAREA_MAX','EFFAREA_RECO_MAX','EVENT_COUNT','EVENT_DEC_MEDIAN','EVENT_ENERGY_MEDIAN','EVENT_RA_MEDIAN','EVENT_TIME_MAX','EVENT_TIME_MIN','GLAT_PNT','GLON_PNT','HI_THRES','LIVETIME','LO_THRES','MUONEFF','NSBLEVEL','N_TELS','OBJECT','OBS_ID','ONTIME','PRESSURE','QUALITY','RA_OBJ','RA_PNT','RELHUM','TELLIST','TIME_END','TIME_OBS','TMID','TMID_STR','TRGRATE','TSTART','TSTART_STR','TSTOP','TSTOP_STR','ZEN_PNT','ZTRGRATE','TC')>"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obs_table.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ces objets permettent de faire la sélection des observations années par années\n",
+    "\n",
+    "\n",
     "t2004  = dict(type='time_box', time_range= Time(['2004-01-01T00:00:00', '2004-12-31T23:59:59']))\n",
     "t2005  = dict(type='time_box', time_range= Time(['2005-01-01T00:00:00', '2005-12-31T23:59:59']))\n",
     "t2006  = dict(type='time_box', time_range= Time(['2006-01-01T00:00:00', '2006-12-31T23:59:59']))\n",
@@ -335,12 +328,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sélection par année et tri des observations (on retire celles qui n'ont pas toutes les IRF)"
+    "Sélection par année et tri des observations (on retire celles qui n'ont pas toutes les IRF : surface efficace, dispersion en énergie, PSF et modèle de fond)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -409,12 +402,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Création de la géométrie"
+    "## Création de la géométrie\n",
+    "\n",
+    "Les bornes en énergie reconstruites utilisées sont 500 GeV à 100 TeV, avec 20 bins.\n",
+    "Pour les énergies vraies on est entre 300 GeV et 200 TeV, avec 30 bins.\n",
+    "\n",
+    "Pour la région du ciel, on se centre sur (l,b)=(0,0), 10 deg en longitude et 8 en latitude."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,10 +439,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# on créer les objet mapdataset en les rangeant dans un dictionnaire, pour accéder facilement chaque année.\n",
+    "# on précise l'axe utilisé pour les énergies vraies\n",
+    "\n",
     "mapdataset_dict = {}\n",
     "\n",
     "for k in range (2004,2020):\n",
@@ -457,22 +458,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A noter que nos datasets ont un axe d'énergie vraie, pas biné très finement cela dit..."
+    "## Fabrication des mapdatasets\n",
+    "\n",
+    "Région d'exclusion pour le FoVBackgroundMaker : un rectangle de 3 deg de longitude sur 1 en latitude\n",
+    "Pour obtenir le masque d'exclusion c'est un peu plus subtil, il faut créer une région dont l'intérieur est False (le rectangle) et l'extérieur est True\n",
+    "\n",
+    "Pour le safe mask : on choisit la méthode \"offset-max\", et la méthode bkg-peak\n",
+    "Pour le FoVBackgroundMaker : on prend la méthode \"scale\" (fit est également possible)\n",
+    "\n",
+    "\"bkg-peak\" applique automatiquement un masque sur les énergies inférieures à l'énergie où le modèle de fond atteint un pic.\n",
+    "Il est possible de faire cette méthode pour voir quel seuil on a en général, puis manuellement définir le bin suivant comme le nouveau seuil\n",
+    "L'importance de cette méthode est aussi de voir si cette méthode donne à peu près toujours le même résultat où si certaines observations admettent des seuils plus haut, et en quel proportion."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fabrication des mapdatasets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Graphe \"de contrôle\" : pour évaluer à quel point x ou y effet dû aux instruments influe sur les observations (année par année), on va vouloir extraire plusieurs infos des observation :\n",
-    "- les énergies de seuils pour chaque observation\n",
+    "### Graphes \"de contrôle\" : \n",
+    "pour évaluer à quel point x ou y effet dû aux instruments influe sur les observations (année par année), on va vouloir extraire plusieurs infos des observation :\n",
+    "- les énergies de seuils (via bkg-peak) pour chaque observation\n",
     "- les offsets par rapport à la source au centre pour chaque observation (ou bien évènements par évènements ?), dans le premier cas c'est simple et ça se déduit simplement de l'offset max pris en compte et de la direction d'observation\n",
     "- les azimuts de la source au centre (idem on peut le faire pour chaque observation ou pour chaque évènement).\n",
     "- coeff de transparence\n",
@@ -482,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -504,8 +509,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15min 37s, sys: 2.07 s, total: 15min 39s\n",
-      "Wall time: 15min 39s\n"
+      "CPU times: user 15min 46s, sys: 2.68 s, total: 15min 49s\n",
+      "Wall time: 15min 54s\n"
      ]
     }
    ],
@@ -528,9 +533,8 @@
     "    histo[year] = []\n",
     "    \n",
     "    # au lieu de \"scale\" prendre \"fit\" en donnant au dataset un masque sur les bin en énergie (prendre à partir de 1 TeV par ex, même si c'est déjà haut 500 GeV)\n",
-    "    # ou alors on met \"bkg-peak\" pour le safemaskmaker (le premier bin en énergie est retiré)\n",
     "    \n",
-    "    # refaire des mapdataset en excluant le premier bin pour voir si ça change\n",
+    "    # ou alors on met \"bkg-peak\" pour le safemaskmaker (le premier bin en énergie est retiré)\n",
     "    \n",
     "    spectrum = PowerLaw2SpectralModel(index=2.3)\n",
     "\n",
@@ -544,25 +548,29 @@
     "        # The data quality cut is applied\n",
     "        dataset = maker_safe_mask.run(dataset, obs)\n",
     "        \n",
-    "        # pour faire un histogramme des énergies de seuil pour chaque observation\n",
-    "        centre = dataset.mask_safe.data[:, 100,100]\n",
-    "        i = np.where(centre == False, 1,0).sum() # +1\n",
-    "        histo[year].append(energy_axis.edges[i].value)\n",
     "        \n",
+    "        # pour faire un histogramme des énergies de seuil pour chaque observation\n",
+    "        #centre = dataset.mask_safe.data[:, 100,100]\n",
+    "        #i = np.where(centre == False, 1,0).sum() # +1\n",
+    "        #histo[year].append(energy_axis.edges[i].value)\n",
     "        \n",
     "        dataset = maker_bkg.run(dataset)\n",
     "        \n",
     "        # The resulting dataset cutout is stacked onto the final one\n",
     "        mapdataset_dict[year].stack(dataset)\n",
     "        \n",
-    "    \n",
-    "    # essayer de se placer systématiquement au dessus du seuil"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -785,7 +793,12 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -981,11 +994,13 @@
     }
    ],
    "source": [
+    "# création des historgrammes d'angles zénithaux de chaque obs, année par année\n",
+    "\n",
     "histo_zen = dict()\n",
     "\n",
     "for year in range(2004,2020):  \n",
     "    histo_zen[year] = []\n",
-    "    # les angles zénitaux sont dans obs_table\n",
+    "    # les angles zénitaux sont juste stockés dans obs_table\n",
     "    \n",
     "    obs_table_year = obs_table.select_observations(year_intervals[year])\n",
     "    histo_zen[year] = obs_table_year[\"ZEN_PNT\"].tolist()\n",
@@ -998,97 +1013,6 @@
     "    plt.ylabel(\"Number of observations\")\n",
     "    \n",
     "    plt.savefig(\"angzen_\"+str(year)+\".pdf\", overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for year in range(2004,2020):  \n",
-    "    array = zip(histo_offset,histo_zen)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<i>ObservationTable length=978</i>\n",
-       "<table id=\"table140604071638464\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>DEC_PNT</th><th>RA_PNT</th><th>ZEN_PNT</th></tr></thead>\n",
-       "<thead><tr><th>deg</th><th>deg</th><th>deg</th></tr></thead>\n",
-       "<thead><tr><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-28.305</td><td>266.3</td><td>60.90057</td></tr>\n",
-       "<tr><td>-29.305</td><td>266.3</td><td>54.16294</td></tr>\n",
-       "<tr><td>-28.305</td><td>266.3</td><td>47.70625</td></tr>\n",
-       "<tr><td>-29.305</td><td>266.3</td><td>41.05625</td></tr>\n",
-       "<tr><td>-28.305</td><td>266.3</td><td>34.719986</td></tr>\n",
-       "<tr><td>-29.305</td><td>266.3</td><td>15.265533</td></tr>\n",
-       "<tr><td>-28.305</td><td>266.3</td><td>9.241486</td></tr>\n",
-       "<tr><td>-28.507833</td><td>266.41666</td><td>23.842133</td></tr>\n",
-       "<tr><td>-29.507833</td><td>266.41666</td><td>17.490547</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>-29.007833</td><td>265.61606</td><td>21.943161</td></tr>\n",
-       "<tr><td>-29.007833</td><td>267.21686</td><td>26.814117</td></tr>\n",
-       "<tr><td>-29.707834</td><td>266.41647</td><td>33.92802</td></tr>\n",
-       "<tr><td>-28.307833</td><td>266.41647</td><td>39.883698</td></tr>\n",
-       "<tr><td>-29.007833</td><td>267.21686</td><td>19.72818</td></tr>\n",
-       "<tr><td>-29.007833</td><td>267.21686</td><td>24.562553</td></tr>\n",
-       "<tr><td>-29.007833</td><td>265.61606</td><td>32.29645</td></tr>\n",
-       "<tr><td>-28.307833</td><td>266.41647</td><td>37.67618</td></tr>\n",
-       "<tr><td>-29.707834</td><td>266.41647</td><td>43.87642</td></tr>\n",
-       "<tr><td>-29.007833</td><td>267.21686</td><td>49.58534</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<ObservationTable length=978>\n",
-       " DEC_PNT     RA_PNT   ZEN_PNT \n",
-       "   deg        deg       deg   \n",
-       " float32    float32   float32 \n",
-       "---------- --------- ---------\n",
-       "   -28.305     266.3  60.90057\n",
-       "   -29.305     266.3  54.16294\n",
-       "   -28.305     266.3  47.70625\n",
-       "   -29.305     266.3  41.05625\n",
-       "   -28.305     266.3 34.719986\n",
-       "   -29.305     266.3 15.265533\n",
-       "   -28.305     266.3  9.241486\n",
-       "-28.507833 266.41666 23.842133\n",
-       "-29.507833 266.41666 17.490547\n",
-       "       ...       ...       ...\n",
-       "-29.007833 265.61606 21.943161\n",
-       "-29.007833 267.21686 26.814117\n",
-       "-29.707834 266.41647  33.92802\n",
-       "-28.307833 266.41647 39.883698\n",
-       "-29.007833 267.21686  19.72818\n",
-       "-29.007833 267.21686 24.562553\n",
-       "-29.007833 265.61606  32.29645\n",
-       "-28.307833 266.41647  37.67618\n",
-       "-29.707834 266.41647  43.87642\n",
-       "-29.007833 267.21686  49.58534"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obs_table[\"DEC_PNT\", \"RA_PNT\", \"ZEN_PNT\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Problème quand on affiche les histo de seuils : il semblerait que les energy-axis des mask_safe des dataset soient décalés pour certaines années.\n",
-    "Normal en fait car la fonction hist ne s'embête pas avec toutes les valeurs à zéro"
    ]
   },
   {
@@ -1290,6 +1214,8 @@
     }
    ],
    "source": [
+    "# affichage des histogrammes des énergies de seuil obtenu par bkg-peak, année par année\n",
+    "\n",
     "for year in range(2004,2020):\n",
     "    \n",
     "    plt.figure()\n",
@@ -1303,37 +1229,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 169,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[MapAxis\n",
-       " \n",
-       " \tname       : energy    \n",
-       " \tunit       : 'TeV'     \n",
-       " \tnbins      : 20        \n",
-       " \tnode type  : edges     \n",
-       " \tedges min  : 5.0e-01 TeV\n",
-       " \tedges max  : 1.0e+02 TeV\n",
-       " \tinterp     : log       ]"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "mapdataset_dict[2009].mask_safe.geom.axes"
+    "### Pour information, différentes fonctions et méthodes utilisées ici"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Pour information, la fonction associée à 'bkg-peak', rien à changer a priori, c'est simple et clair. ça fait ce que c'est censé faire, \n",
@@ -1569,6 +1478,10 @@
     }
    ],
    "source": [
+    "# A revoir\n",
+    "# Vérification du masque en énergie dans le mapdataset final (avec toutes les observations stackées), \n",
+    "# il dépend a priori des coordonnées spatiales choisi pour vérifier\n",
+    "\n",
     "mapdataset_dict[2004].mask_safe.data[:,250,250]"
    ]
   },
@@ -1590,6 +1503,8 @@
     }
    ],
    "source": [
+    "# simple vérification\n",
+    "\n",
     "print(energy_axis.edges)"
    ]
   },
@@ -1615,22 +1530,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "for year in range(2004,2020):\n",
     "    \n",
-    "    filename = \"../../../gammapy_data/mapdataset_hess/mapsdataset_ash_108arcmin/mapdataset\" +str(year)+\".fits.gz\"\n",
+    "    filename = \"../../../gammapy_data/mapdataset_hess/mapdataset\" +str(year)+\".fits.gz\"\n",
     "    mapdataset_dict[year].write(filename, overwrite=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
