--- a/confluence2020/hap-hd/model_definition_hap-hd.ipynb
+++ b/confluence2020/hap-hd/model_definition_hap-hd.ipynb
@@ -82,7 +82,7 @@
     "path = Path(\"../../../../gammapy_data/GC_variability2020/hap-hd\")\n",
     "path.mkdir(exist_ok=True)\n",
     "\n",
-    "pathm = Path(\"../../../../gammapy_data/GC_variability2020/hap-hd/models\")\n",
+    "pathm = path/\"models\"\n",
     "pathm.mkdir(exist_ok=True)"
    ]
   },
@@ -181,7 +181,7 @@
     "model.parameters[\"lon_0\"].frozen = True\n",
     "model.parameters[\"lat_0\"].frozen = True\n",
     "model.parameters[\"amplitude\"].frozen = False\n",
-    "model.parameters[\"reference\"].frozen = True # change très peu"
+    "model.parameters[\"reference\"].frozen = True"
    ]
   },
   {
@@ -243,13 +243,11 @@
     }
    ],
    "source": [
-    "# GaussianSpatialModel attention pour la composante étendue et les deux sigma\n",
-    "\n",
     "CSmap = Map.read(\"$GAMMAPY_DATA/CS_reproj.fits\") \n",
     "\n",
     "coords = CSmap.geom.get_coord()\n",
     "lon = coords.skycoord.l.wrap_at(180*u.deg).to_value('deg')\n",
-    "factor = np.exp(-0.5*(lon)**2/1.11**2) #1.11 quand on a les 3 composantes\n",
+    "factor = np.exp(-0.5*(lon)**2/1.11**2)\n",
     "CSmap.data*=factor\n",
     "\n",
     "CSmap.data = (CSmap.data > 10.0) * CSmap.data\n",
@@ -259,10 +257,9 @@
     "\n",
     "DGC = TemplateSpatialModel(CSmap) \n",
     "\n",
-    "CC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.11 deg\", frame='galactic') #sigma de 0.11\n",
+    "CC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.11 deg\", frame='galactic')\n",
     "\n",
     "LSC = GaussianSpatialModel(lon_0=\"0 deg\", lat_0=\"0 deg\", sigma=\"0.97 deg\", e=np.sqrt(1-(0.22/0.97)**2), phi=\"90 deg\", frame='galactic') \n",
-    "#sigma1 de 0.97 et sigma2 de 0.22, à transformer en sigma et excentricité\n",
     "\n",
     "mapCC = CC.evaluate_geom(geom2d)*geom2d.solid_angle()\n",
     "mapLSC = LSC.evaluate_geom(geom2d)*geom2d.solid_angle()\n",
@@ -276,8 +273,7 @@
     "mapLSC = mapLSC/LSCmax\n",
     "mapDGC = mapDGC/DGCmax\n",
     "\n",
-    "data_combine = 2.68*mapLSC + 4.3*mapDGC +1.03*mapCC # facteurs pour avoir les bons ratios sur les max d'amplitude\n",
-    "\n",
+    "data_combine = 2.68*mapLSC + 4.3*mapDGC +1.03*mapCC \n",
     "carte = Map.from_geom(geom2d)\n",
     "carte.quantity = data_combine\n",
     "\n",
@@ -348,9 +344,9 @@
     "\n",
     "#éventuellement étendre le masque\n",
     "\n",
-    "bizarre_region = CircleSkyRegion(SkyCoord(358.6,  -0.6, unit=\"deg\", frame=\"galactic\"), 0.5 * u.deg)\n",
+    "J1745_303_region = CircleSkyRegion(SkyCoord(358.6,  -0.6, unit=\"deg\", frame=\"galactic\"), 0.5 * u.deg)\n",
     "\n",
-    "fit_mask = geom.region_mask([fit_region])*geom.region_mask([bizarre_region] , inside=False)\n",
+    "fit_mask = geom.region_mask([fit_region])*geom.region_mask([J1745_303_region] , inside=False)\n",
     "\n",
     "fit_mask = Map.from_geom(geom, data=fit_mask)"
    ]
