--- a/confluence2020/hap-fr/3Dspectral_analysis_fr.ipynb
+++ b/confluence2020/hap-fr/3Dspectral_analysis_fr.ipynb
@@ -697,8 +697,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "sigma = [1, 2] # estimating\n",
-    "cts_sigma = make_contours(fit, result_minuit, 10, sigma)"
+    "sigma = [1, 2] # estimating the contour for 1 and 2 sigmas\n",
+    "\n",
+    "cts_sigma = make_contours(fit, result_minuit, 10, sigma) # beware of the parameter selection"
    ]
   },
   {
