--- a/confluence2020/hap-fr/parameter_evolution_hap-fr.ipynb
+++ b/confluence2020/hap-fr/parameter_evolution_hap-fr.ipynb
@@ -113,7 +113,13 @@
     "# Directory for outputs\n",
     "\n",
     "path = Path(\"../../../../gammapy_data/GC_variability2020_full/hap-fr\")\n",
-    "path.mkdir(exist_ok=True)"
+    "path.mkdir(exist_ok=True)\n",
+    "\n",
+    "pathm = Path(\"../../../../gammapy_data/GC_variability2020_full/hap-fr/mapdatasets\")\n",
+    "pathm.mkdir(exist_ok=True)\n",
+    "\n",
+    "pathp = Path(\"../../../../gammapy_data/GC_variability2020_full/hap-fr/parameter_stability\")\n",
+    "pathp.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -138,8 +144,8 @@
     "\n",
     "for year in range(2004,2020):\n",
     "    \n",
-    "    filename = \"mapdatasets/mapdataset\" +str(year)+\".fits.gz\"\n",
-    "    mapdataset_dict[year] = MapDataset.read(path/filename)"
+    "    filename = \"mapdataset\" +str(year)+\".fits.gz\"\n",
+    "    mapdataset_dict[year] = MapDataset.read(pathm/filename)"
    ]
   },
   {
@@ -159,7 +165,55 @@
     "pathmo.mkdir(exist_ok=True)\n",
     "\n",
     "name = pathmo/\"models_template.yaml\"\n",
-    "modelGC,modelG09, modeldiff = SkyModels.read(name)"
+    "modelGC,modelG09, modeldiff = SkyModels.read(name)\n",
+    "\n",
+    "#name = pathmo/\"models_template_1cutoff.yaml\"\n",
+    "#modelGC,modelG09, modeldiff = SkyModels.read(name)\n",
+    "\n",
+    "#name = pathmo/\"models_template_2cutoff.yaml\"\n",
+    "#modelGC,modelG09, modeldiff = SkyModels.read(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting which parameters will vary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelGC.parameters[\"index\"].frozen = True\n",
+    "modelGC.parameters[\"lon_0\"].frozen = True\n",
+    "modelGC.parameters[\"lat_0\"].frozen = True\n",
+    "modelGC.parameters[\"amplitude\"].frozen = False\n",
+    "modelGC.parameters[\"reference\"].frozen = True \n",
+    "\n",
+    "modelG09.parameters[\"index\"].frozen = True\n",
+    "modelG09.parameters[\"lon_0\"].frozen = True\n",
+    "modelG09.parameters[\"lat_0\"].frozen = True\n",
+    "modelG09.parameters[\"amplitude\"].frozen = False\n",
+    "\n",
+    "model_diff.parameters[\"index\"].frozen = True\n",
+    "model_diff.parameters[\"norm\"].frozen = True\n",
+    "model_diff.parameters[\"amplitude\"].frozen = False\n",
+    "model_diff.parameters[\"reference\"].frozen = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if there are cutoffs in the spectra\n",
+    "\n",
+    "modelGC.parameters[\"lambda_\"].frozen = True \n",
+    "model_diff.parameters[\"lambda_\"].frozen = True"
    ]
   },
   {
@@ -272,8 +326,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we automatically exclude the years for which the fit didn't succeed\n",
-    "\n",
     "years = []\n",
     "for year in range(2004,2020):\n",
     "    if results[year-2004].message =='Optimization terminated successfully.':\n",
@@ -285,6 +337,71 @@
    "metadata": {},
    "source": [
     "# Saving the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting a time evolution model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "from astropy.modeling import models, fitting\n",
+    "\n",
+    "from scipy.stats import chisquare, chi2\n",
+    "\n",
+    "# chi2 non réduit\n",
+    "def chisq(obs, exp, error):\n",
+    "    chisq = 0\n",
+    "    for i in range(len(obs)):\n",
+    "        chisq = chisq + ((obs[i]-exp)**2)/(error[i]**2)\n",
+    "    return chisq\n",
+    "\n",
+    "# chi2 réduit\n",
+    "def chisqr(obs, exp, error):\n",
+    "    chisqr = 0\n",
+    "    for i in range(len(obs)):\n",
+    "        chisqr = chisqr + ((obs[i]-exp)**2)/(error[i]**2)\n",
+    "    return chisqr/(len(obs) -1)\n",
+    "\n",
+    "def pval(obs, exp, error, nddl): # number of DoF is the number of points minus number of fitted parameters (1 for a constant)\n",
+    "    chisq = 0\n",
+    "    for i in range(len(obs)):\n",
+    "        chisq = chisq + ((obs[i]-exp)**2)/(error[i]**2)\n",
+    "    pval = 1 - chi2.cdf(chisq, nddl)\n",
+    "    return pval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Displaying parameters evolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To be rewritten for each parameter\n",
+    "\n",
+    "x = years\n",
+    "y=[]\n",
+    "\n",
+    "for year in years:\n",
+    "    x.append(mapdataset_dict[year].models[0].spectral_model[\"amplitude\"])\n",
+    "\n",
+    "plt.plot(x,y)"
    ]
   },
   {
@@ -1367,47 +1484,6 @@
     "plt.grid()\n",
     "\n",
     "plt.savefig(path/\"GCDEflux_evolution_04_19_fr_full.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fitting a time evolution model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.stats as stats\n",
-    "\n",
-    "from astropy.modeling import models, fitting\n",
-    "\n",
-    "from scipy.stats import chisquare, chi2\n",
-    "\n",
-    "# chi2 non réduit\n",
-    "def chisq(obs, exp, error):\n",
-    "    chisq = 0\n",
-    "    for i in range(len(obs)):\n",
-    "        chisq = chisq + ((obs[i]-exp)**2)/(error[i]**2)\n",
-    "    return chisq\n",
-    "\n",
-    "# chi2 réduit\n",
-    "def chisqr(obs, exp, error):\n",
-    "    chisqr = 0\n",
-    "    for i in range(len(obs)):\n",
-    "        chisqr = chisqr + ((obs[i]-exp)**2)/(error[i]**2)\n",
-    "    return chisqr/(len(obs) -1)\n",
-    "\n",
-    "def pval(obs, exp, error, nddl): # number of DoF is the number of points minus number of fitted parameters (1 for a constant)\n",
-    "    chisq = 0\n",
-    "    for i in range(len(obs)):\n",
-    "        chisq = chisq + ((obs[i]-exp)**2)/(error[i]**2)\n",
-    "    pval = 1 - chi2.cdf(chisq, nddl)\n",
-    "    return pval"
    ]
   },
   {
