--- a/confluence2020/hap-fr/3Dspectral_analysis_fr.ipynb
+++ b/confluence2020/hap-fr/3Dspectral_analysis_fr.ipynb
@@ -328,9 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "exception was raised in user function\nUser function arguments:\n        par_000_index = +1.974172\n    par_001_amplitude = +2.097878\n      par_002_lambda_ = +1.328059\n    par_003_amplitude = +5.602977\n        par_004_index = +1.916367\n    par_005_amplitude = +6.227192\n      par_006_lambda_ = +0.896807\n         par_007_norm = +1.002676\n        par_008_index = +2.106350\n    par_009_amplitude = +1.856692\n      par_010_lambda_ = +0.805452\n    par_011_amplitude = +5.045512\n        par_012_index = +1.511210\n    par_013_amplitude = +5.681121\n      par_014_lambda_ = +1.727088\n         par_015_norm = +1.003079\n        par_016_index = +1.500428\n    par_017_amplitude = +2.415215\n      par_018_lambda_ = +2.646682\n    par_019_amplitude = +6.048141\n        par_020_index = +1.974063\n    par_021_amplitude = +7.072630\n      par_022_lambda_ = +1.676389\n         par_023_norm = +0.998090\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-775049761ebc>\u001b[0m in \u001b[0;36mfit_dataset\u001b[0;34m(fit)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfit_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/gammapy-0.15/lib/python3.7/site-packages/gammapy/modeling/fit.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, optimize_opts, covariance_opts)\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0moptimize_opts\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m             \u001b[0moptimize_opts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m         \u001b[0moptimize_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0moptimize_opts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcovariance_opts\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/gammapy-0.15/lib/python3.7/site-packages/gammapy/modeling/fit.py\u001b[0m in \u001b[0;36moptimize\u001b[0;34m(self, backend, **kwargs)\u001b[0m\n\u001b[1;32m    156\u001b[0m         \u001b[0;31m# and return something simpler, not a tuple of three things\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m         factors, info, optimizer = compute(\n\u001b[0;32m--> 158\u001b[0;31m             \u001b[0mparameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstat_sum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m         )\n\u001b[1;32m    160\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/gammapy-0.15/lib/python3.7/site-packages/gammapy/modeling/iminuit.py\u001b[0m in \u001b[0;36moptimize_iminuit\u001b[0;34m(parameters, function, **kwargs)\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0mtol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"tol\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mminuit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMinuit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminuit_func\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfcn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m     \u001b[0mminuit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmigrad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmigrad_opts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m     \u001b[0mminuit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0mminuit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_strategy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32miminuit/_libiminuit.pyx\u001b[0m in \u001b[0;36miminuit._libiminuit.Minuit.migrad\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: exception was raised in user function\nUser function arguments:\n        par_000_index = +1.974172\n    par_001_amplitude = +2.097878\n      par_002_lambda_ = +1.328059\n    par_003_amplitude = +5.602977\n        par_004_index = +1.916367\n    par_005_amplitude = +6.227192\n      par_006_lambda_ = +0.896807\n         par_007_norm = +1.002676\n        par_008_index = +2.106350\n    par_009_amplitude = +1.856692\n      par_010_lambda_ = +0.805452\n    par_011_amplitude = +5.045512\n        par_012_index = +1.511210\n    par_013_amplitude = +5.681121\n      par_014_lambda_ = +1.727088\n         par_015_norm = +1.003079\n        par_016_index = +1.500428\n    par_017_amplitude = +2.415215\n      par_018_lambda_ = +2.646682\n    par_019_amplitude = +6.048141\n        par_020_index = +1.974063\n    par_021_amplitude = +7.072630\n      par_022_lambda_ = +1.676389\n         par_023_norm = +0.998090\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -481,21 +498,21 @@
     "    result1.parameters.covariance[2:7,2:7])\n",
     "\n",
     "mapdataset_hess1.models[2].spectral_model.parameters.covariance = (\n",
-    "    result1.parameters.covariance[2:7,2:7])\n",
+    "    result1.parameters.covariance[13:18,13:18])\n",
     "\n",
     "\n",
     "mapdataset_hess2.models[0].spectral_model.parameters.covariance = (\n",
     "    result2.parameters.covariance[2:7,2:7])\n",
     "\n",
     "mapdataset_hess2.models[2].spectral_model.parameters.covariance = (\n",
-    "    result2.parameters.covariance[2:7,2:7])\n",
+    "    result2.parameters.covariance[13:18,13:18])\n",
     "\n",
     "\n",
     "mapdataset_hess1u.models[0].spectral_model.parameters.covariance = (\n",
     "    result1u.parameters.covariance[2:7,2:7])\n",
     "\n",
     "mapdataset_hess1u.models[2].spectral_model.parameters.covariance = (\n",
-    "    result1u.parameters.covariance[2:7,2:7])"
+    "    result1u.parameters.covariance[13:18,13:18])"
    ]
   },
   {
@@ -508,7 +525,7 @@
     "    result_stacked.parameters.covariance[2:7,2:7])\n",
     "\n",
     "mapdataset_stacked.models[2].spectral_model.parameters.covariance = (\n",
-    "    result_stacked.parameters.covariance[2:7,2:7])\n",
+    "    result_stacked.parameters.covariance[13:18,13:18])\n",
     "\n",
     "\n",
     "# How to put the covariance-computed errors for the joint datasets ?\n",
@@ -517,7 +534,7 @@
     "#    result_joint.parameters.covariance[2:7,2:7])\n",
     "\n",
     "#mapdataset_hess1u.models[2].spectral_model.parameters.covariance = (\n",
-    "#    result_joint.parameters.covariance[2:7,2:7])"
+    "#    result_joint.parameters.covariance[13:18,13:18])"
    ]
   },
   {
