--- a/confluence2020/hap-fr/3Dspectral_analysis_fr.ipynb
+++ b/confluence2020/hap-fr/3Dspectral_analysis_fr.ipynb
@@ -526,10 +526,10 @@
     "    if models[0].spectral_model.parameters[\"lambda_\"].value != 0:\n",
     "        cutoff = 1/models[0].spectral_model.parameters[\"lambda_\"].value\n",
     "        models[0].spectral_model.plot(\n",
-    "        **plot_kwargs, label=r\"diffuse      : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1, cutoff = {2:03.3f} TeV\".format(index, 10**12*amp, cutoff))\n",
+    "        **plot_kwargs, label=r\"J1745-290 : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1, cutoff = {2:03.3f} TeV\".format(index, 10**12*amp, cutoff))\n",
     "    else :  \n",
     "        models[0].spectral_model.plot(\n",
-    "        **plot_kwargs, label=r\"diffuse      : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1\".format(index, 10**12*amp ))\n",
+    "        **plot_kwargs, label=r\"J1745-290 : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1\".format(index, 10**12*amp ))\n",
     "    models[0].spectral_model.plot_error(**plot_kwargs)\n",
     "\n",
     "    \n",
@@ -540,10 +540,10 @@
     "    if models[2].spectral_model.parameters[\"lambda_\"].value != 0:\n",
     "        cutoff = 1/models[2].spectral_model.parameters[\"lambda_\"].value\n",
     "        models[2].spectral_model.plot(\n",
-    "        **plot_kwargs, label=r\"diffuse      : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1, cutoff = {2:03.3f} TeV\".format(index, 10**12*amp, cutoff ))\n",
+    "        **plot_kwargs, label=r\"diffuse   : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1, cutoff = {2:03.3f} TeV\".format(index, 10**12*amp, cutoff ))\n",
     "    else :  \n",
     "        models[2].spectral_model.plot(\n",
-    "        **plot_kwargs, label=r\"diffuse      : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1\".format(index, 10**12*amp ))\n",
+    "        **plot_kwargs, label=r\"diffuse   : index = {0:03.3f} , amplitude = {1:03.2f}e-12 (cm^2 s TeV)^-1\".format(index, 10**12*amp ))\n",
     "    models[2].spectral_model.plot_error(**plot_kwargs)\n",
     "\n",
     "    plt.title(\"Spectral models fitted for a constant GC source (\" + name + \")\")\n",
